<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="hello">Hello World!</string>
    <string name="app_name">MirageDLNA</string>
  

    <string name="nofilename">Do not fond file name</string>
    <string name="slide">Slide</string>
    <string name="search_devices">Search devices...</string>
    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort1" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong1" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
	<string name="wait">Loading....</string>
	<string name="downloading">Downloading</string>
	<string name="loading">Loading...</string>
	<string name="unsupportformat">This format does not support file playback</string>
	<string name="cannotplay">can not play the video</string>
	<string name="unknownartist">Unknown Artist</string>
	<string name="singleplayback">Repreat</string>
	<string name="closesingleplayback">Close repreat</string>
	
	<string name="loadfileFailure">Load failed</string>
	<string name="unknow_error">Unknown error</string>
	<string name="Failed_to_load">The image is too large, failed to load, please try again later..</string>
	<string name="Play_failed">Play failed</string>
	
	
	
	<string name="home">Home</string>
	<string name="exit">Exit</string>
	<string name="set">Settings</string>
	<string name="flash">Refresh</string>
	<string name="check_music">Network is unstable or service disconnect</string>
	<string name="music_already_last">this is last audio file</string>
	<string name="music_already_first">this is first audio file</string>
	<string name="audio_play_failed">The audio playback failed!</string>
	<string name="connection_serices_failed">Failed to connect the media server!</string>
	<string name="connecting_serices">Connecting the media server...</string>
	<string name="music_error">Audio format error or the file does not exist...</string>
	<string name="photo_already_last">this is last photo file</string>
	<string name="photo_already_first">this is first photo file</string>
    <string name="share_content">Shared content</string>
    <string name="start_share_content">Start shared content</string>
    <string name="share_content_set">Shared content set</string>
    <string name="share_content_set_message">Share your favorite content with friends and family</string>
    <string name="devices_name">Devices name</string>
    <string name="media_play">Media player</string>
    <string name="start_media_play">Start Media player Services</string>
    <string name="media_play_name">Media player name</string>
    <string name="network_set">Network set</string>
    <string name="network_set_input">Set network access point</string>
    <string name="slide_set">Set browse slide show interval time</string>
    <string name="display_type">Display type</string>
    <string name="display_list">List display file</string>
    <string name="display_grid">Grid display file</string>
    <string name="photo">Photo</string>
    <string name="music">Music</string>
    <string name="movie">Video</string>
    <string name="play">Player</string>
    
    <string name="close_share_content">Close Meida Share</string>
    <string name="close_media_play">Close Media player Services</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="app_about">\n
		Android 2.2 Above platform, the resolution of the best 480 * 800\n
		\n
		®2011 Bo chuangli Technology Corporation\n
		Copyright.\n
		\n
		----------------------------------------------------\n
		MirageDLNA Provides a DLNA protocol 1.0 DMP, DMS, DMC, DMR four functional\n
		\n
		The DMS(server):\n
		\tThe current system supports all formats,the gallery to be able to scan a variety of documents can support \n
		\n
		DMP(client):\n
		\tAble to display a list of different types of documents, the system can display all format file\n
		DMC(control terminal)to the control device：\n
		\tRender function can control, such as Win7, set-top boxes, smart TV\n
		DMR(player side)can support playback format：\n
		\tSystem capable of playing video, music files can be controlled side control playback. The premise is the current application can not retreated backstage\n
	</string>
	
    <string name="select_network_msg">Please select to use Eth network or Wifi hotspot network?</string>
    <string name="select_network_tit">Select a network connection</string>
    <string name="ethnet_string">Eth network</string>
    <string name="softap_string">Wifi-hospot</string>
    <string name="zoombutton_hide_message">Picture playback interface, zoom icon hidden</string>
    <string name="zoombutton_display_message">Picture playback interface, zoom icon is displayed</string>
    <string name="zoombutton_title">Zoom icon</string>
    
    <string name="audio_remote_play_error">Current audio, remote player format is not supported!!</string>
    <string name="image_remote_play_error">Current image, remote player format is not supported!!</string>
    <string name="video_remote_play_error">Current video, remote player format is not supported!!</string>
    
    <string name="network_load_failed">Network load failed</string>
    <string name="please_set_network">Please set up wifi network or Ethernet</string>
    

    <string name="volume">Volume</string>
    <string name="volume_min">Volume is Min</string>
    <string name="check_update">Check update</string>
    <string name="check_updateing">Checking for updates...</string>
    <string name="has_update">Has update</string>
    <string name="hased_update">Is already the newest version</string>
    <string name="playing_remote_video">Is playing remote video</string>
    <string name="exiting">Exit...</string>
    <string name="network_connection_failed">Network connection failed</string>
    
    <string name="get_current_network_image_failed">Get the current network picture fails!</string>
</resources>
